[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/HelpInfo.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/IngameMenu.gd" type="Script" id=2]

[node name="IngameMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
margin_left = 409.6
margin_top = 240.0
margin_right = 534.6
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 118.0
margin_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_right = 111.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/CenterContainer"]
margin_right = 111.0
margin_bottom = 92.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 20.0
text = "Continue Game"

[node name="Restart Game" type="Button" parent="Panel/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 44.0
text = "Restart Game"

[node name="Help" type="Button" parent="Panel/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 111.0
margin_bottom = 68.0
text = "Help"

[node name="Quit" type="Button" parent="Panel/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 111.0
margin_bottom = 92.0
text = "Quit"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 111.0
margin_bottom = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 111.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_right = 111.0
margin_bottom = 14.0
text = "Master Audio"
align = 1

[node name="MasterAudio" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 111.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 111.0
margin_bottom = 52.0
text = "Sfx Audio"
align = 1

[node name="SfxAudio" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 111.0
margin_bottom = 72.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HelpInfo" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 234.969, 102.314 )

[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/VBoxContainer/Restart Game" to="." method="_on_Restart_Game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer2/MasterAudio" to="." method="_on_MasterAudio_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer2/SfxAudio" to="." method="_on_SfxAudio_value_changed"]
